--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<nav clas
+hello
 
 
 
@@ -21,12 +21,12 @@
 
 
 </div><!-- /.container -->
-<script src="/bower_components/jquery/dist/jquery.js"></script>
-<script src="/bower_components/angular/angular.js"></script>
-<script src="/bower_components/angular-route/angular-route.js"></script>
-<script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
-<script src="/app.js"></script>
-<script src="/controllers/books.js"></script>
-<script src="/controllers/genres.js"></script>
+<script src="./bower_components/jquery/dist/jquery.js"></script>
+<script src="./bower_components/angular/angular.js"></script>
+<script src="./bower_components/angular-route/angular-route.js"></script>
+<script src="./bower_components/bootstrap/dist/js/bootstrap.js"></script>
+<script src="./app.js"></script>
+<script src="./controllers/books.js"></script>
+<script src="./controllers/genres.js"></script>
 </body>
 </html>
