--- a/client/index.html
+++ b/client/index.html
@@ -6,17 +6,32 @@
 </head>
 <body>
 hello
+<nav class="navbar navbar-default">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Bookstore</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#/films/add">Add Book</a></li>
+            </ul>
+        </div><!--/.nav-collapse -->
+    </div>
+</nav>
 
-
-
-
-
-
-
-
-
-
-
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <div ng-view></div>
+        </div>
+    </div>
+</div>
 
 
 
@@ -26,7 +41,7 @@ hello
 <script src="./bower_components/angular-route/angular-route.js"></script>
 <script src="./bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <script src="./app.js"></script>
-<script src="./controllers/books.js"></script>
-<script src="./controllers/genres.js"></script>
+<script src="./controllers/filmController.js"></script>
+
 </body>
 </html>
